manifests/auth/keycloak/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: keycloak
  namespace: nok-base

spec:
  replicas: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
      - name: keycloak

        image: ghcr.io/cspdevlabs/nok-portal-auth-keycloak:v1.0.0
        imagePullPolicy: Always

        args:
        - start-dev
        - --import-realm
        - --http-relative-path=/auth
        - --proxy-headers=xforwarded

        ports:
        - containerPort: 8080

        volumeMounts:
        - name: realm-import
          mountPath: /opt/keycloak/data/import
          readOnly: true

      volumes:
      - name: realm-import
        configMap:
          name: keycloak-realm
