manifests/auth/keycloak/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: keycloak-postgres
  namespace: nok-base

spec:
  selector:
    app: keycloak-postgres

  ports:
  - port: 5432
    targetPort: 5432

  type: ClusterIP
